--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
   		<artifactId>jclouds-all</artifactId>
   		<version>1.7.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.amazonaws</groupId>
+  		<artifactId>aws-java-sdk</artifactId>
+  		<version>1.6.12</version>
+  	</dependency>
   </dependencies>
   <properties>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
