--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
   		<groupId>org.apache.maven.plugins</groupId>
   		<artifactId>maven-compiler-plugin</artifactId>
   		<version>3.1</version>
+  		<exclusions>
+  			<exclusion>
+  				<artifactId>google-collections</artifactId>
+  				<groupId>com.google.collections</groupId>
+  			</exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
@@ -67,14 +73,9 @@
   		<version>1.48</version>
   	</dependency>
   	<dependency>
-  		<groupId>mysql</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.1.6</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>jersey</groupId>
-  		<artifactId>jersey</artifactId>
-  		<version>0.7-ea</version>
+  		<groupId>org.glassfish.jersey.archetypes</groupId>
+  		<artifactId>jersey-quickstart-webapp</artifactId>
+  		<version>2.5.1</version>
   	</dependency>
   	<dependency>
   		<groupId>org.glassfish.jersey.media</groupId>
@@ -84,7 +85,36 @@
   	<dependency>
   		<groupId>com.amazonaws</groupId>
   		<artifactId>aws-java-sdk</artifactId>
-  		<version>1.6.12</version>
+  		<version>1.7.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>
+  			org.glassfish.jersey.test-framework.providers
+  		</groupId>
+  		<artifactId>
+  			jersey-test-framework-provider-inmemory
+  		</artifactId>
+  		<version>2.5.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.ws.rs</groupId>
+  		<artifactId>javax.ws.rs-api</artifactId>
+  		<version>2.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.containers</groupId>
+  		<artifactId>jersey-container-jetty-servlet</artifactId>
+  		<version>2.5.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.ws.rs</groupId>
+  		<artifactId>jsr311-api</artifactId>
+  		<version>0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.media</groupId>
+  		<artifactId>jersey-media-multipart</artifactId>
+  		<version>2.5.1</version>
   	</dependency>
   </dependencies>
   <properties>
